@@ -14,7 +14,7 @@
 /*  along with SCIP; see the file COPYING. If not email to scip@zib.de.      */
 /*                                                                           */
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
-#pragma ident "@(#) $Id: presol_dualfix.c,v 1.28 2007/11/15 10:53:18 bzfpfend Exp $"
+#pragma ident "@(#) $Id: presol_dualfix.c,v 1.29 2007/11/19 14:45:03 bzfheinz Exp $"
 
 /**@file   presol_dualfix.c
  * @brief  fixing roundable variables to best bound
@@ -31,7 +31,7 @@
 
 #define PRESOL_NAME            "dualfix"
 #define PRESOL_DESC            "roundable variables dual fixing"
-#define PRESOL_PRIORITY         +100000 /**< priority of the presolver (>= 0: before, < 0: after constraint handlers) */
+#define PRESOL_PRIORITY         +8000000 /**< priority of the presolver (>= 0: before, < 0: after constraint handlers) */
 #define PRESOL_MAXROUNDS             -1 /**< maximal number of presolving rounds the presolver participates in (-1: no limit) */
 #define PRESOL_DELAY              FALSE /**< should presolver be delayed, if other presolvers found reductions? */
 
