@@ -41,6 +41,7 @@ plugins:
 - less aggressive scaling in linear constraint handler presolve to improve numerics
 
 parameters:
+- changed parameter default values for the priority of presolver "dualfix" and "inttobinary"
 - new parameter "constraint/linear/upgrade/binpack" to enable or disable the linear upgrading process
 - new parameter "constraint/linear/upgrade/eqknapsack" to enable or disable the linear upgrading process
 - new parameter "constraint/linear/upgrade/invarknapsack" to enable or disable the linear upgrading process
